--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ html
                   li
                     a(href="/insert") Inserir
                   li
-                    a(href="/searchForTags") Pesquisa por Tag
+                    a(href="/searchForTags") Pesquisa por Tags
                   li.dropdown
                     a.dropdown-toggle(data-toggle="dropdown" role="button" href="#") Cadastros&nbsp
                       span.caret
@@ -30,6 +30,8 @@ html
                     a.dropdown-toggle(data-toggle="dropdown" role="button" href="#") Pesquisas&nbsp
                       span.caret
                       ul.dropdown-menu
+                          li
+                            a(href="/searchForTags") Pesquisa por Tags
                           li
                             a(href="/searchForCodigo" ) Pesquisa por Código
                           li
