--- a/views/searchForNota.jade
+++ b/views/searchForNota.jade
@@ -26,7 +26,7 @@ block content
       div.col-sm-offset-2.col-sm-10
          table#tableNota.display
             tbody
-               if results
+               if (results != "")
                   each result in results
                      tr
                         td #{result.codigo}
@@ -65,6 +65,6 @@ block script
       });
 
       $("#searchNota").on('keyup',function(event){
-         var nota = $(this).val().replace(/[^a-zA-Z0-9\-]+/g,'');
+         var nota = $(this).val().replace(/[^a-zA-Z\u00C0-\u00ff0-9\-\.\!\?\:\;\," "]+/g,'');
          $(this).val(nota);
       });
