--- a/views/searchForTags.jade
+++ b/views/searchForTags.jade
@@ -28,7 +28,7 @@ block content
       div.col-sm-offset-2.col-sm-10
          table#tableTags.display
             tbody
-               if results
+               if (results != "")
                   each result in results
                      tr
                         td #{result.codigo}
