--- a/views/edit.jade
+++ b/views/edit.jade
@@ -33,7 +33,7 @@ block content
                   div(id=i)
                      a(id=i value="#{arquivo}") #{arquivo}
                      span &nbsp&nbsp
-                     button.btn.btn-default.btn-xs(id=i value="#{arquivo}" type="submit" ) -
+                     button.btn.btn-default.btn-xs(id=i value="#{arquivo}") -
 
       div.form-group
          label.control-label.col-sm-2(for='arquivos') Arquivo(s):
@@ -104,34 +104,46 @@ block script
              });
       });
 
-      $(document).on('click','button.btn.btn-default.btn-xs', function(event){
+      $('#itensArquivos button.btn.btn-default.btn-xs').on('click',function(event){
          var i = $(this).attr('id');
          var value = $(this).attr('value');
-         $('div#'+i).remove();
+         $('div #'+i).remove();
          var count = $('#itensArquivos').children().length;
          if (count == 0)
-            $('#listaArquivos').attr('style','display: none');
+                   $('#listaArquivos').attr('style','display: none');
          rest.del('/documents',{codigo:"#{codigo}",value: value});
          rest.get('/version',{codigo:"#{codigo}"}, function(data){
-            $('#versao.form-control').val(data.versao);
+                   $('#versao.form-control').val(data.versao);
          });
          $('#comando.form-control').val('edit');
       });
-
 
       $('select#perfil').on('click',function(event){
              $('#editTags').tokenfield('createToken','Perfil: '+$('select#perfil option:selected').text());
       });
 
-      $('select#perfil').on('keydown',function(event){
+      $('select#perfil').on('keypress',function(event){
+             var key = event.which || event.keyCode;
              if (event.keyCode == 13) {
                     $('#editTags').tokenfield('createToken','Perfil: '+$('select#perfil option:selected').text());
              }
+             event.preventDefault();
       });
 
       $('select#funcionalidade').on('click',function(event){
              var descricao = $('select#funcionalidade option:selected').text();
-             rest.get('/insert/'+descricao, function(data){
+             rest.get('/edit/funcionalidade/'+descricao, function(data){
+                   $('select#subTipos').empty();
+                   $.each(data, function(i, value){
+                          $('select#subTipos').append($('<option>').text(value).attr('value', value));
+                   });
+             });
+             event.preventDefault();
+      });
+
+      $('select#funcionalidade').on('keydown',function(event){
+             var descricao = $('select#funcionalidade option:selected').text();
+             rest.get('/edit/funcionalidade/'+descricao, function(data){
                    $('select#subTipos').empty();
                    $.each(data, function(i, value){
                           $('select#subTipos').append($('<option>').text(value).attr('value', value));
@@ -139,14 +151,15 @@ block script
              });
       });
 
-      $('select#funcionalidade').on('keyup',function(event){
+      $('select#funcionalidade').on('keypress',function(event){
              var descricao = $('select#funcionalidade option:selected').text();
-             rest.get('/insert/'+descricao, function(data){
+             rest.get('/edit/funcionalidade/'+descricao, function(data){
                    $('select#subTipos').empty();
                    $.each(data, function(i, value){
                           $('select#subTipos').append($('<option>').text(value).attr('value', value));
                    });
              });
+             event.preventDefault();
       });
 
       $('select#subTipos').on('click',function(event){
@@ -155,16 +168,19 @@ block script
              if ((funcionalidade != "") && (subTipo != "")) {
                     $('#editTags').tokenfield('createToken','Funcionalidade: '+funcionalidade+'>>'+subTipo);
              }
+             event.preventDefault();
       });
 
-      $('select#subTipos').on('keydown',function(event){
-             if (event.keyCode == 13) {
+      $('select#subTipos').on('keypress',function(event){
+             var key = event.which || event.keyCode;
+             if (key == 13) {
                    var funcionalidade = $('select#funcionalidade option:selected').text();
                    var subTipo = $('select#subTipos option:selected').text();
                    if ((funcionalidade != "") && (subTipo != "")) {
                          $('#editTags').tokenfield('createToken','Funcionalidade: '+funcionalidade+'>>'+subTipo);
                    }
              }
+             event.preventDefault();
       });
 
       $(document).on('click','a',function(event){
@@ -182,12 +198,12 @@ block script
             $('#listaArquivos').attr('style','display: block');
       });
 
-      $('#editIssue').on('keyup',function(){
+      $('#editIssue').on('keyup',function(event){
              var numero = $(this).val().replace(/[^\d]/g,'');
              $('#editIssue').val(numero);
       });
 
-      $('#editIssue').on('blur', function(){
+      $('#editIssue').on('blur', function(event){
              var numero = $('#editIssue').val();
              if (numero != ""){
                    $('#editTags').tokenfield('createToken', 'Issue: '+numero);
