--- a/views/insert.jade
+++ b/views/insert.jade
@@ -115,10 +115,12 @@ block script
              $('#insertTags').tokenfield('createToken','Perfil: '+$('select#perfil option:selected').text());
       });
 
-      $('select#perfil').on('keydown',function(event){
+      $('select#perfil').on('keypress',function(event){
+             var key = event.which || event.keyCode;
              if (event.keyCode == 13) {
                     $('#insertTags').tokenfield('createToken','Perfil: '+$('select#perfil option:selected').text());
              }
+             event.preventDefault();
       });
 
       $('select#funcionalidade').on('click',function(event){
@@ -129,16 +131,28 @@ block script
                           $('select#subTipos').append($('<option>').text(value).attr('value', value));
                    });
              });
+             event.preventDefault();
       });
 
-      $('select#funcionalidade').on('keyup',function(event){
+      $('select#funcionalidade').on('keydown',function(event){
              var descricao = $('select#funcionalidade option:selected').text();
-             rest.get('/insert/'+descricao, function(data){
+             rest.get('/insert/funcionalidade/'+descricao, function(data){
                    $('select#subTipos').empty();
                    $.each(data, function(i, value){
-                          $('select#subTipos').append($('<option>').text(value).attr('value', value));
+                         $('select#subTipos').append($('<option>').text(value).attr('value', value));
                    });
              });
+      });
+
+      $('select#funcionalidade').on('keypress',function(event){
+             var descricao = $('select#funcionalidade option:selected').text();
+             rest.get('/insert/funcionalidade/'+descricao, function(data){
+                   $('select#subTipos').empty();
+                   $.each(data, function(i, value){
+                         $('select#subTipos').append($('<option>').text(value).attr('value', value));
+                   });
+             });
+             event.preventDefault();
       });
 
       $('select#subTipos').on('click',function(event){
@@ -147,19 +161,22 @@ block script
              if ((funcionalidade != "") && (subTipo != "")) {
                     $('#insertTags').tokenfield('createToken','Funcionalidade: '+funcionalidade+'>>'+subTipo);
              }
+             event.preventDefault();
       });
 
-      $('select#subTipos').on('keydown',function(event){
-             if (event.keyCode == 13) {
+      $('select#subTipos').on('keypress',function(event){
+             var key = event.which || event.keyCode;
+             if (key == 13) {
                     var funcionalidade = $('select#funcionalidade option:selected').text();
                     var subTipo = $('select#subTipos option:selected').text();
                    if ((funcionalidade != "") && (subTipo != "")) {
                          $('#insertTags').tokenfield('createToken','Funcionalidade: '+funcionalidade+'>>'+subTipo);
                    }
              }
+             event.preventDefault();
       });
 
-      $("#TipoNota.dropdown-menu li a").click(function(){
+      $("#TipoNota.dropdown-menu li a").click(function(event){
              var selText = $(this).text();
              $(this).parents('.btn-group').find('.dropdown-toggle').html(selText+' <span class="caret"> </span>');
              if (selText == 'Regra de Negócio') {
@@ -179,12 +196,12 @@ block script
              $('#insertTags').tokenfield('createToken', selText);
       });
 
-      $('#insertIssue').on('keyup',function(){
+      $('#insertIssue').on('keyup',function(event){
              var numero = $(this).val().replace(/[^\d]/g,'');
              $('#insertIssue').val(numero);
       });
 
-      $('#insertIssue').on('blur', function(){
+      $('#insertIssue').on('blur', function(event){
              var numero = $('#insertIssue').val();
              if (numero != ""){
                    $('#insertTags').tokenfield('createToken', 'Issue: '+numero);
