Adição da tela de contadores e adaptação no modulo contadorrest!!

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,9 +23,11 @@ html
                       span.caret
                       ul.dropdown-menu
                           li
-                            a(href="/perfil") Perfil
+                            a(href="/perfil") Perfis
                           li
                             a(href="/funcionalidade") Funcionalidades
+                          li
+                            a(href="/contador") Contadores
                   li.dropdown
                     a.dropdown-toggle(data-toggle="dropdown" role="button" href="#") Pesquisas&nbsp
                       span.caret
